--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -583,3 +583,14 @@ h1 {
   gap: 6px;
   align-items: center;
 }
+
+.hidden {
+  display: none;
+}
+
+.index-wrapper {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
