--- a/scss/styles.css
+++ b/scss/styles.css
@@ -750,4 +750,21 @@ h1 {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.hidden {
+  display: none;
+}
+
+.index-wrapper {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=styles.css.map */
