--- a/scss/styles.css
+++ b/scss/styles.css
@@ -767,4 +767,19 @@ h1 {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.disabled {
+  padding: 6px 12px;
+  border-radius: 8px;
+  background-color: #fff;
+  color: #303030;
+  cursor: pointer;
+  -webkit-transition: background-color 200ms ease;
+  transition: background-color 200ms ease;
+  -webkit-box-shadow: 0 -1px 0 0 #b5b5b5 inset, -1px 0 0 0 #e3e3e3 inset, 1px 0 0 0 #e3e3e3 inset, 0 1px 0 0 #e3e3e3 inset;
+          box-shadow: 0 -1px 0 0 #b5b5b5 inset, -1px 0 0 0 #e3e3e3 inset, 1px 0 0 0 #e3e3e3 inset, 0 1px 0 0 #e3e3e3 inset;
+  color: #b5b5b5;
+  background-color: #000;
+  opacity: 0.1;
+}
 /*# sourceMappingURL=styles.css.map */
